...
            <Text>
              I&apos;m a new user <Text style={styles.signUpText}>Sign up</Text>
            </Text>
          </Pressable>

          <Pressable style={styles.footer} onPress={() => navigation.navigate("ForgotPassword")}>
            <Text style={styles.forgotPasswordText}>Forgot Password?</Text>
          </Pressable>
        </View>
      </View>

      <View style={styles.errorContainer}>
        {Array.isArray(error) &&
...
